Add IdentityUser Create Endpoint

--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -23,7 +23,10 @@
 
   <ItemGroup>
     <Folder Include="Features\Department\Commands\" />
+    <Folder Include="Features\IdentityUser\Queries\Handlers\" />
+    <Folder Include="Features\IdentityUser\Queries\Models\" />
     <Folder Include="Mapping\Departments\CommandMapping\" />
+    <Folder Include="Mapping\IdentityUser\Queries\" />
   </ItemGroup>
 
 </Project>
