--- a/SchoolPorject.Api/appsettings.json
+++ b/SchoolPorject.Api/appsettings.json
@@ -7,6 +7,15 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dbcontext":  "server=.;database=SchoolCleanArcitechture;trusted_connection=true;"
+    "dbcontext": "server=.;database=SchoolCleanArcitechture;trusted_connection=true;"
+  },
+  "jwtConfigration": {
+    "Secret": "ILoveKSRFOREVERValorantLeagueOfLegends",
+    "Issuer": "schoolProejct",
+    "audience": "anyone",
+    "validateAudience": false,
+    "validateIssuer": false,
+    "validateLifeTime": false,
+    "validateIssuerSigningKey":  true
   }
 }
