Complete Jwt Auth

--- a/SchoolPorject.Api/appsettings.json
+++ b/SchoolPorject.Api/appsettings.json
@@ -13,9 +13,11 @@
     "Secret": "ILoveKSRFOREVERValorantLeagueOfLegends",
     "Issuer": "schoolProejct",
     "audience": "anyone",
-    "validateAudience": false,
-    "validateIssuer": false,
-    "validateLifeTime": false,
-    "validateIssuerSigningKey":  true
+    "validateAudience": true,
+    "validateIssuer": true,
+    "validateLifeTime": true,
+    "validateIssuerSigningKey": true,
+    "AccessTokenExpireDate": 1,
+    "RefreshTokenExpireDate": 20
   }
 }
