--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Authentication\Command\Dto\" />
+    <Folder Include="Features\Authorization\Queries\" />
     <Folder Include="Features\Department\Commands\" />
     <Folder Include="Mapping\Departments\CommandMapping\" />
   </ItemGroup>
