Add SendEmail Endpoint

--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="Features\Authentication\Command\Dto\" />
+    <Folder Include="Features\Emails\Queries\" />
     <Folder Include="Mapping\Departments\CommandMapping\" />
   </ItemGroup>
 
