--- a/SchoolPorject.Api/appsettings.json
+++ b/SchoolPorject.Api/appsettings.json
@@ -19,5 +19,12 @@
     "validateIssuerSigningKey": true,
     "AccessTokenExpireDate": 1,
     "RefreshTokenExpireDate": 20
+  },
+  "emailSettings": {
+    "port": "465",
+    "host": "smtp.gmail.com",
+    "FromEmail": "hamadaahmed927@gmail.com",
+    "password": "jkno irdl wqjm xnwl"
+
   }
 }
