--- a/SchoolProject.Services/SchoolProject.Services.csproj
+++ b/SchoolProject.Services/SchoolProject.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SchoolPorject.Infrustructure\SchoolProject.Infrustructure.csproj" />
     <ProjectReference Include="..\SchoolProject.Domain\SchoolProject.Domain.csproj" />
   </ItemGroup>
