--- a/SchoolPorject.Infrustructure/SchoolProject.Infrustructure.csproj
+++ b/SchoolPorject.Infrustructure/SchoolProject.Infrustructure.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+    <PackageReference Include="StoredProcedureEFCore" Version="1.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.0.0" />
   </ItemGroup>
