ending Instructor Endpoint + upload image to instructor

--- a/SchoolProject.Core/SchoolProject.Core.csproj
+++ b/SchoolProject.Core/SchoolProject.Core.csproj
@@ -31,6 +31,7 @@
     <Folder Include="Features\Authentication\Command\Dto\" />
     <Folder Include="Features\Emails\Queries\" />
     <Folder Include="Mapping\Departments\CommandMapping\" />
+    <Folder Include="Mapping\Instructors\Queries\" />
   </ItemGroup>
 
 </Project>
