--- a/SchoolPorject.Api/appsettings.json
+++ b/SchoolPorject.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "dbcontext": "server=.;database=SchoolCleanArcitechture;trusted_connection=true;"
+    "dbcontext": "server=.;database=SchoolCleanArcitechture;trusted_connection=true;TrustServerCertificate=True;"
   },
   "jwtConfigration": {
     "Secret": "ILoveKSRFOREVERValorantLeagueOfLegends",
@@ -26,5 +26,26 @@
     "FromEmail": "hamadaahmed927@gmail.com",
     "password": "jkno irdl wqjm xnwl"
 
+  }, 
+  "serilog": {
+    "Using": [ "Serilog.Sinks.MSSqlServer", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": { "Microsoft": "Error" }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          //"ConnectionString": "server=.;database=SchoolCleanArcitechtConnectionStringure;trusted_connection=true;TrustServerCertificate=True",
+          "ConnectionString": "server=.;database=SchoolCleanArcitechture;trusted_connection=true;TrustServerCertificate=True;",
+          "TableName": "SystemLogs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
   }
 }
