--- a/SchoolProject.Services/SchoolProject.Services.csproj
+++ b/SchoolProject.Services/SchoolProject.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.4.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
 
   <ItemGroup>
